--- a/Node_Express/package.json
+++ b/Node_Express/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "exercise": "nodemon ./exercises/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tri Truong",
