--- a/Node_Express/package.json
+++ b/Node_Express/package.json
@@ -12,6 +12,7 @@
   "author": "Tri Truong",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   },
